sample of using grid to align text, issue with column width for some items background color, will try flex next

--- a/24_Responsive_Website/style.css
+++ b/24_Responsive_Website/style.css
@@ -12,3 +12,34 @@ img {
   max-width: 100%;
 }
 
+.top {
+  display: grid;
+  grid-template-areas: 
+    "hero hero cta1"
+    "hero hero cta2"
+}
+
+.hero {
+  grid-area: hero;
+  min-height: 400px;
+  background: white url(images/taco.jpg);
+  background-size: cover;
+  background-position: bottom right;
+  padding: 50px;
+  display: grid;
+  justify-content: start;
+  align-content: center;
+}
+
+.hero > * {
+  background: var(--yellow);
+}
+
+.cta1 {
+  grid-area: cta1;
+}
+
+.cta2 {
+  grid-area: cta2;
+}
+
